# school_fair_ncapi

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  wrangler.jsonc
data/: menu.json
