[project]
name = "school-fair-ncapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Timothy0508",email = "99249271+Timothy0508@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry.group.test.dependencies]
flake8 = "^7.1.2"
pytest = "^8.3.5"
black = "^25.1.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
