[project]
name = "school-fair-ncapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Timothy0508",email = "99249271+Timothy0508@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "rich (>=14.0.0,<15.0.0)"
]

[tool.poetry.group.test.dependencies]
flake8 = "^7.1.2"
pytest = "^8.3.5"
black = "^25.1.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
